// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Greeting message should greet enrolled users 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Gather input="dtmf speech" method="POST" language="en-GB" hints="record,sign up,enrol,one,1,hear,listen,two,2" speechTimeout="auto" numDigits="1" timeout="5" speechModel="default">
        <Say language="en-GB" voice="Polly.Emma-Neural">
            welcome-known
        </Say>
    </Gather>
    <Redirect method="GET">
        ./en-DEV/count
    </Redirect>
</Response>
`;

exports[`Greeting message should greet strangers 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Gather input="dtmf speech" method="POST" language="en-GB" hints="record,sign up,enrol,one,1,hear,listen,two,2" speechTimeout="auto" numDigits="1" timeout="5" speechModel="default">
        <Say language="en-GB" voice="Polly.Emma-Neural">
            welcome-stranger
        </Say>
    </Gather>
    <Redirect method="GET">
        ./en-DEV/count
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer {"Digits": "1"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Redirect method="GET">
        ./en-GB/record
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer {"Digits": "2"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Redirect method="GET">
        ./en-GB/count
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer {"Digits": "4"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        Sorry, I didn't get that.
    </Say>
    <Redirect method="GET">
        ./en-GB
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer {"SpeechResult": "listen"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Play>
        voice.wav
    </Play>
    <Redirect method="GET">
        ./en-GB/count
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer {"SpeechResult": "record"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Redirect method="GET">
        ./en-GB/record
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer {"SpeechResult": "swimming pool"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        Sorry, I didn't get that.
    </Say>
    <Redirect method="GET">
        ./en-GB
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer null 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        Sorry, I didn't get that.
    </Say>
    <Redirect method="GET">
        ./en-GB
    </Redirect>
</Response>
`;
